# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.68 2009-12-08 13:58:29 mn Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.6 (2009/??/??)
 - (2009/12/08) Fixed bug#4384 - Customer User Info not deleted when From in
    AgentTicketPhone is changed.
 - (2009/12/08) Fixed bug#4482 - Owner update possible with no new owner set.
 - (2009/12/07) Fixed bug#4246 - Response Templates fail to populate for certain
    email tickets.
 - (2009/12/07) Fixed bug#4381 - Function change_selection in AgentTicketMove.
 - (2009/12/07) Fixed bug#4400 - OTRS switches back to phone view when closing
    ticket after split.
 - (2009/12/07) Fixed bug#4597 - Unnecessary slash in download links.
 - (2009/12/07) Fixed bug#2768 - AttachmentsContent-Disposition header downloading
    a non-ASCII filename.
 - (2009/12/07) Fixed bug#4282 - Fixed problems with CustomerInfo for Usernames
    with a '+'.
 - (2009/12/07) Fixed bug#4477 - Uninitialized Value issue with Redirect()
    function in Layout.pm.
 - (2009/12/07) Fixed bug#3907 - Caching function not working due to wrong
    hardcoded umask.
 - (2009/12/02) Fixed bug#4613 - Umlauts in <OTRS_*> variable and also on whole
    message are not show right with ArticleStorageFS.
 - (2009/12/02) Fixed bug#3667 - E-mail notification link is wrong when using
    FastCGI.
 - (2009/11/25) Fixed bug#4498 - Rich text editor places whitespace in front of
    lines in plain text mail body.
 - (2009/11/23) Fixed bug#4128 - Signature line breaks are stripped in
    E-Mail-Ticket.
 - (2009/11/18) Fixed bug#4319 - 'no quotable message' error for old messages
    after upgrade.
 - (2009/11/18) Added FastCGI handle for web installer.
 - (2009/11/17) Fixed bug#4299 - Image Upload in Signature Management fails.