@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.68 2009-12-08 13:58:29 mn Exp $
+# $Id: CHANGES,v 1.993.2.69 2009-12-08 15:23:55 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.6 (2009/??/??)
+ - (2009/12/08) Fixed bug# 4323 - Customer Interface shows last customer article
+    instead of last article.
  - (2009/12/08) Fixed bug#4384 - Customer User Info not deleted when From in
     AgentTicketPhone is changed.
  - (2009/12/08) Fixed bug#4482 - Owner update possible with no new owner set.
